--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shimmer: ^2.0.0
   lucide_icons: ^0.257.0
   confetti: ^0.7.0
+  flutter_animate: ^4.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
