--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.3.0
   livekit_client: ^2.4.5
   permission_handler: ^11.0.0
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ dev_dependencies:
 flutter:
   assets:
     - web/assets/Fluoverse_Logo.png
+    - web/assets/android-chrome-192x192.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
