--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   livekit_client: ^2.4.5
   permission_handler: ^11.0.0
   flutter_svg: ^2.1.0
+  flutter_markdown: ^0.7.7+1
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,8 @@ flutter:
   assets:
     - web/assets/Fluoverse_Logo.png
     - web/assets/android-chrome-192x192.png
+    - web/assets/Privacy.txt
+    - assets/Privacy.md
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
