Terms complete + how it works fixes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - web/assets/android-chrome-192x192.png
     - web/assets/Privacy.txt
     - assets/Privacy.md
+    - assets/Terms.md
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
