--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,26 @@
 [build]
-  command = "flutter build web"
+  command = "bash build-web.sh"
   publish = "build/web"
 
 [[plugins]]
   package = "netlify-plugin-flutter"
+
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/main.dart.js"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/flutter.js"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
